2007-09-07 19:57-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenu.m: Correct exception on start when
	opening a gorm from the command line.

2007-09-05 00:41-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormButtonAttributesInspector.h: Added ivars
	for new buttons.
	* Palettes/2Controls/GormButtonAttributesInspector.m: Addeed code
	in ok: and revert: to handle modifier settings
	* Palettes/2Controls/GormNSButtonInspector.gorm: Added key equivalent
	modifier buttons.

2007-09-03 23:12-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormButtonAttributesInspector.m: added
	code to ok: and revert: to handle arrow keys for key equivalents.
	* Palettes/2Controls/GormNSButtonInspector.gorm: Added to dropdown
	list to include options for arrow keys.

2007-09-01 16:24-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenu.m: Correction for compilation issue 
	found by Riccardo.   Code was improperly using protected _superMenu 
	variable directly.

2007-08-24 22:36-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/VersionProfiles.plist: Added version information for
	NSButtonCell.

2007-08-24 00:50-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormPrivate.m: Changed initWithCoder: to handle
	older .gorm (version 0) files correctly.

2007-08-19 21:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* ChangeLog
	* GNUmakefile
	* Palettes/5Controllers/ControllersPalette.m
	* Palettes/5Controllers/ControllersPalette.tiff
	* Palettes/5Controllers/GNUmakefile
	* Palettes/5Controllers/GNUmakefile.preamble
	* Palettes/5Controllers/palette.table
	* Palettes/GNUmakefile
	* Resources/Defaults.plist: Initial changes for controllers palette.

2007-08-19 21:21-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile
	* Palettes/GNUmakefile
	* Resources/Defaults.plist
