@@ -1,3 +1,8 @@
+2007-11-05 01:56-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormViewEditor.m: Change code to use drawRect: instead
+	of drawInNeededIgnoringOpacity: to correct bug#21478.
+
 2007-09-07 19:57-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Palettes/0Menus/GormNSMenu.m: Correct exception on start when
